HLS_Multirate/FIR_Halfband_v1/FIR_Halfband_v1/logs/hls_run_csim_22816.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/FIR_Halfband_v1 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=FIR_HLS.cpp' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/FIR_HLS.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=FIR_HLS.h' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/FIR_HLS.h' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=../../Matlab/FIR_halfband_HLS.h' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/HLS-multirate-DSP/Matlab/FIR_halfband_HLS.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=FIR_HLS_TB.cpp' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(10)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/FIR_HLS_TB.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=../../Matlab/TS_HLS_halfband.res' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/Matlab/TS_HLS_halfband.res' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=../../Matlab/TS_HLS_halfband.dat' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(12)
INFO: [HLS 200-10] Adding test bench file 'C:/HLS-multirate-DSP/Matlab/TS_HLS_halfband.dat' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=FIR_Halfband_v1' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(13)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xck26-sfvc784-2LV-c' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xck26-sfvc784-2LV-c'
INFO: [HLS 200-1465] Applying ini 'package.ip.display_name=FIR_Halfband_v1' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(14)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/HLS-multirate-DSP/HLS_Multirate/FIR_Halfband_v1/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../FIR_HLS_TB.cpp in debug mode
   Compiling ../../../../FIR_HLS.cpp in debug mode
csim.mk:94: recipe for target 'obj/FIR_HLS.o' failed
In file included from ../../../../FIR_HLS_TB.cpp:1:
In file included from ../../../../FIR_HLS.h:2:
In file included from C:/AMD/Vitis/2024.2/include/ap_fixed.h:9:
In file included from C:/AMD/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/AMD/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/AMD/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/AMD/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/AMD/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/AMD/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMD/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMD/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
1 warning generated.
In file included from ../../../../FIR_HLS.cpp:1:
In file included from ../../../../FIR_HLS.h:2:
In file included from C:/AMD/Vitis/2024.2/include/ap_fixed.h:9:
In file included from C:/AMD/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/AMD/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/AMD/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/AMD/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/AMD/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/AMD/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/AMD/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/AMD/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../FIR_HLS.cpp:29:40: error: expected ')'
        y1_ges = (y1_phase0 + y1_phase1;
                                       ^
../../../../FIR_HLS.cpp:29:18: note: to match this '('
        y1_ges = (y1_phase0 + y1_phase1;
                 ^
1 warning and 1 error generated.
make: *** [obj/FIR_HLS.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 4 seconds. Total CPU system time: 1 seconds. Total elapsed time: 12.176 seconds; peak allocated memory: 274.078 MB.
